RESOLVED FIXED21549
REGRESSION(r37507): scrollbar track pieces are the wrong size, don't meet in the middle of thumb
https://bugs.webkit.org/show_bug.cgi?id=21549
Summary REGRESSION(r37507): scrollbar track pieces are the wrong size, don't meet in ...
Timothy Hatcher
Reported 2008-10-11 19:28:07 PDT
This regressed in r37507. See screenshot and LayoutTests/scrollbars/scrollbar-buttons.html.
Attachments
Screenshot (6.95 KB, image/png)
2008-10-11 19:28 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2008-10-11 19:28:32 PDT
Created attachment 24296 [details] Screenshot
Dave Hyatt
Comment 2 2008-10-11 21:20:38 PDT
Fixed in r37517.
Note You need to log in before you can comment on or make changes to this bug.