2008-10-11  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=21549 (regression in before/after track pieces).

        Also fixed resizer positioning problems.

        Reviewed by Tim Hatcher

        * platform/ScrollbarThemeComposite.cpp:
        (WebCore::ScrollbarThemeComposite::splitTrack):
        (WebCore::ScrollbarThemeComposite::trackPosition):
        (WebCore::ScrollbarThemeComposite::trackLength):
        * platform/ScrollbarThemeComposite.h:
        (WebCore::ScrollbarThemeComposite::constrainTrackRectToTrackPieces):
        * rendering/RenderLayer.cpp:
        (WebCore::scrollCornerRect):
        (WebCore::RenderLayer::positionOverflowControls):
        (WebCore::RenderLayer::paintOverflowControls):
        (WebCore::RenderLayer::isPointInResizeControl):
        (WebCore::RenderLayer::hitTestOverflowControls):
        * rendering/RenderScrollbarTheme.cpp:
        (WebCore::RenderScrollbarTheme::constrainTrackRectToTrackPieces):
        * rendering/RenderScrollbarTheme.h:



Canonical link: https://commits.webkit.org/29761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37517 268f45cc-cd09-0410-ab3c-d52691b4dbfc