WebCore/platform/ScrollbarThemeComposite.cpp
@@ -230,34 +230,21 @@ void ScrollbarThemeComposite::invalidatePart(Scrollbar* scrollbar, ScrollbarPart
     scrollbar->invalidateRect(result);
 }
 
-void ScrollbarThemeComposite::splitTrack(Scrollbar* scrollbar, const IntRect& trackRect, IntRect& beforeThumbRect, IntRect& thumbRect, IntRect& afterThumbRect)
+void ScrollbarThemeComposite::splitTrack(Scrollbar* scrollbar, const IntRect& unconstrainedTrackRect, IntRect& beforeThumbRect, IntRect& thumbRect, IntRect& afterThumbRect)
 {
     // This function won't even get called unless we're big enough to have some combination of these three rects where at least
     // one of them is non-empty.
-    trackPieceRects(scrollbar, trackRect, beforeThumbRect, afterThumbRect);
-    
+    IntRect trackRect = constrainTrackRectToTrackPieces(scrollbar, unconstrainedTrackRect);
     int thickness = scrollbar->orientation() == HorizontalScrollbar ? scrollbar->height() : scrollbar->width();
     int thumbPos = thumbPosition(scrollbar);
-    if (scrollbar->orientation() == HorizontalScrollbar)
-        thumbRect = IntRect(beforeThumbRect.x() + thumbPos, trackRect.y() + (trackRect.height() - thickness) / 2, thumbLength(scrollbar), thickness);
-    else
-        thumbRect = IntRect(trackRect.x() + (trackRect.width() - thickness) / 2, beforeThumbRect.y() + thumbPos, thickness, thumbLength(scrollbar));
-}
-
-void ScrollbarThemeComposite::trackPieceRects(Scrollbar* scrollbar, const IntRect& trackRect, IntRect& beforeThumbRect, IntRect& afterThumbRect)
-{
-    // This function won't even get called unless we're big enough to have some combination of these three rects where at least
-    // one of them is non-empty.
-     if (scrollbar->orientation() == HorizontalScrollbar) {
-        IntRect preThumbRect = IntRect(trackRect.x(), trackRect.y(), trackRect.width() / 2, trackRect.height());
-        beforeThumbRect = adjustTrackPieceRect(scrollbar, BackTrackPart, preThumbRect);
-        IntRect postThumbRect = IntRect(trackRect.x() + preThumbRect.width(), trackRect.y(), trackRect.right() - preThumbRect.right(), trackRect.height());
-        afterThumbRect = adjustTrackPieceRect(scrollbar, ForwardTrackPart, postThumbRect);
+    if (scrollbar->orientation() == HorizontalScrollbar) {
+        thumbRect = IntRect(trackRect.x() + thumbPos, trackRect.y() + (trackRect.height() - thickness) / 2, thumbLength(scrollbar), thickness); 
+        beforeThumbRect = IntRect(trackRect.x(), trackRect.y(), thumbPos + thumbRect.width() / 2, trackRect.height()); 
+        afterThumbRect = IntRect(trackRect.x() + beforeThumbRect.width(), trackRect.y(), trackRect.right() - beforeThumbRect.right(), trackRect.height());
     } else {
-        IntRect preThumbRect = IntRect(trackRect.x(), trackRect.y(), trackRect.width(), trackRect.height() / 2);
-        beforeThumbRect = adjustTrackPieceRect(scrollbar, BackTrackPart, preThumbRect);
-        IntRect postThumbRect = IntRect(trackRect.x(), trackRect.y() + preThumbRect.height(), trackRect.width(), trackRect.bottom() - preThumbRect.bottom());
-        afterThumbRect = adjustTrackPieceRect(scrollbar, ForwardTrackPart, postThumbRect);
+        thumbRect = IntRect(trackRect.x() + (trackRect.width() - thickness) / 2, trackRect.y() + thumbPos, thickness, thumbLength(scrollbar));
+        beforeThumbRect = IntRect(trackRect.x(), trackRect.y(), trackRect.width(), thumbPos + thumbRect.height() / 2); 
+        afterThumbRect = IntRect(trackRect.x(), trackRect.y() + beforeThumbRect.height(), trackRect.width(), trackRect.bottom() - beforeThumbRect.bottom());
     }
 }
 
@@ -289,16 +276,14 @@ int ScrollbarThemeComposite::minimumThumbLength(Scrollbar* scrollbar)
 
 int ScrollbarThemeComposite::trackPosition(Scrollbar* scrollbar)
 {
-    IntRect beforeThumbRect, afterThumbRect;
-    trackPieceRects(scrollbar, trackRect(scrollbar), beforeThumbRect, afterThumbRect);
-    return (scrollbar->orientation() == HorizontalScrollbar) ? beforeThumbRect.x() - scrollbar->x() : beforeThumbRect.y() - scrollbar->y();
+    IntRect constrainedTrackRect = constrainTrackRectToTrackPieces(scrollbar, trackRect(scrollbar));
+    return (scrollbar->orientation() == HorizontalScrollbar) ? constrainedTrackRect.x() - scrollbar->x() : constrainedTrackRect.y() - scrollbar->y();
 }
 
 int ScrollbarThemeComposite::trackLength(Scrollbar* scrollbar)
 {
-    IntRect beforeThumbRect, afterThumbRect;
-    trackPieceRects(scrollbar, trackRect(scrollbar), beforeThumbRect, afterThumbRect);
-    return (scrollbar->orientation() == HorizontalScrollbar) ? afterThumbRect.right() - beforeThumbRect.x() : afterThumbRect.bottom() - beforeThumbRect.y();
+    IntRect constrainedTrackRect = constrainTrackRectToTrackPieces(scrollbar, trackRect(scrollbar));
+    return (scrollbar->orientation() == HorizontalScrollbar) ? constrainedTrackRect.width() : constrainedTrackRect.height();
 }
 
 void ScrollbarThemeComposite::paintScrollCorner(ScrollView* view, GraphicsContext* context, const IntRect& cornerRect)
