WebCore/platform/ScrollbarThemeComposite.h
@@ -63,10 +63,7 @@ protected:
     virtual void paintButton(GraphicsContext*, Scrollbar*, const IntRect&, ScrollbarPart) {}
     virtual void paintThumb(GraphicsContext*, Scrollbar*, const IntRect&) {}
     
-    virtual IntRect adjustTrackPieceRect(Scrollbar*, ScrollbarPart, const IntRect& rect) { return rect; }
-    
-private:
-    void trackPieceRects(Scrollbar* scrollbar, const IntRect& trackRect, IntRect& beforeThumbRect, IntRect& afterThumbRect);
+    virtual IntRect constrainTrackRectToTrackPieces(Scrollbar*, const IntRect& rect) { return rect; }
 };
 
 }
