WebCore/rendering/RenderScrollbarTheme.cpp
@@ -90,9 +90,19 @@ IntRect RenderScrollbarTheme::trackRect(Scrollbar* scrollbar, bool)
     return static_cast<RenderScrollbar*>(scrollbar)->trackRect(startLength, endLength);
 }
 
-IntRect RenderScrollbarTheme::adjustTrackPieceRect(Scrollbar* scrollbar, ScrollbarPart part, const IntRect& rect)
+IntRect RenderScrollbarTheme::constrainTrackRectToTrackPieces(Scrollbar* scrollbar, const IntRect& rect)
 { 
-    return static_cast<RenderScrollbar*>(scrollbar)->trackPieceRectWithMargins(part, rect);
+    IntRect backRect = static_cast<RenderScrollbar*>(scrollbar)->trackPieceRectWithMargins(BackTrackPart, rect);
+    IntRect forwardRect = static_cast<RenderScrollbar*>(scrollbar)->trackPieceRectWithMargins(ForwardTrackPart, rect);
+    IntRect result = rect;
+    if (scrollbar->orientation() == HorizontalScrollbar) {
+        result.setX(backRect.x());
+        result.setWidth(forwardRect.right() - backRect.x());
+    } else {
+        result.setY(backRect.y());
+        result.setHeight(forwardRect.bottom() - backRect.y());
+    }
+    return result;
 }
 
 void RenderScrollbarTheme::paintScrollCorner(ScrollView*, GraphicsContext* context, const IntRect& cornerRect)
